--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -42,7 +42,7 @@
                                         <input type="password" id="new-password" class="form-control ctm-form mb-2 mb-2" placeholder="New Password">
                                         <input type="password" id="confirm-new-password" class="form-control ctm-form mb-2 mb-2" placeholder="Confirm Password">
                                         <div class="d-flex justify-content-center">
-                                            <button type="submit" id="change-password-button" class="btn ctm-btn mt-2">Change Password</button>
+                                            <button type="submit" id="change-password-btn" class="btn ctm-btn mt-2">Change Password</button>
                                         </div>
                                     </div>
                                 </form>
@@ -66,8 +66,8 @@
                                     <h5>Change Username</h5>
                                     <form id="new-username-form" class="mt-3">
                                         <div class="input-group">
-                                            <input type="text" id="new-username" class="form-control" placeholder="New username">
-                                            <button type="submit" id="send-btn" class="btn" title="Check availability">
+                                            <input type="text" id="new-username" class="form-control ctm-form" placeholder="New username">
+                                            <button type="submit" id="check-username-availability" class="btn send-btn" title="Check availability">
                                                 <i class="fas fa-check"></i>
                                             </button>
                                         </div>
@@ -76,17 +76,22 @@
                                 <!-- Change Email -->
                                 <div class="list-group-item">
                                     <h5>Change Email</h5>
-                                    <div class="mt-3">
-                                        <input type="email" id="new-email" class="form-control mb-2" placeholder="New email">
-                                    </div>
+                                    <form id="new-email-form" class="mt-3">
+                                        <div class="input-group">
+                                            <input type="email" id="new-email" class="form-control ctm-form" placeholder="New email">
+                                            <button type="submit" id="check-email-availability" class="btn send-btn" title="Confirm Email Change">
+                                                <i class="fas fa-check"></i>
+                                            </button>
+                                        </div>
+                                    </form>
                                 </div>
                                 <!-- Delete Account -->
                                 <div class="list-group-item ">
                                     <h5 class="ctm-text-danger">Delete Account</h5>
-                                    <div class="mt-3 text-center">
-                                        <input type="password" id="delete-password" class="form-control mb-2" placeholder="Enter password">
+                                    <form id="delete-account-form" class="mt-3 text-center">
+                                        <input type="password" id="delete-password" class="form-control ctm-form mb-2" placeholder="Enter password">
                                         <button class="btn ctm-btn-danger" id="delete-account-btn" data-bs-toggle="modal" data-bs-target="#delete-profile-modal">Delete Account</button>
-                                    </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -110,9 +115,8 @@
             </div>
             <!-- Save Changes Button -->
             <div class="mt-4 text-center">
-                <button class="btn ctm-btn" id="save-changes-btn">Save Changes</button>
+                <button class="btn ctm-btn" id="save-changes-btn" data-bs-toggle="modal" data-bs-target="#save-changes-modal">Save Changes</button>            </div>
             </div>
-        </div>
     </div>
 </div>
 
@@ -130,7 +134,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger">Delete</button>
+                <button id="confirm-delete-account"type="button" class="btn btn-danger">Delete</button>
             </div>
         </div>
     </div>
