--- a/frontend/service/components/sidebar/sidebar.html
+++ b/frontend/service/components/sidebar/sidebar.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="mt-auto p-3">
 		<ul class="nav mb-5 flex-column">
-			<li id="logout-btn" class="nav-item text-center"><a href="#" class=" btn ctm-btn-dark p-3">log out</a></li>
+			<li id="logout-btn" class="nav-item text-center"><div class=" btn ctm-btn-dark p-3">log out</div></li>
 		</ul>
 	</div>
 </div>
