--- a/frontend/service/components/tournament/new-tournament.html
+++ b/frontend/service/components/tournament/new-tournament.html
@@ -15,15 +15,17 @@
 			align-items: center;
 			border-radius: 5px;
 		}
-		.switch .btn {
+		.switch-btn {
 			height: auto;
 			aspect-ratio: 3/2;
+			background-color: var(--light);
 			border: 1px solid var(--dark);
 			transition: perspective 0.3s ease;
 		}
-		.switch .btn.active {
+		.switch-btn.active {
 			background-color: var(--accent);
-			
+			transform: scale(105%);
+
 		}
 		.switch .btn:focus {
 			outline: none !important;
@@ -31,12 +33,12 @@
 		}
 		
 		.switch-btn-left.active {
-			box-shadow: -4px 0px 4px rgba(0, 0, 0, 0.6);
-			transform: perspective(500px) rotateY(20deg) scale(106%);
+			box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.6);
+			/* transform: perspective(500px) rotateY(5deg) ; */
 		}
 		.switch-btn-right.active {
-			box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.6);
-			transform: perspective(500px) rotateY(-20deg) scale(106%);
+			box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
+			/* transform: perspective(500px) rotateY(-5deg) scale(102%); */
 		}
 	
 	</style>
@@ -57,8 +59,8 @@
                     <div class="mb-3 d-flex flex-column align-items-center">
                         <label for="tournament-participants" class="form-label ctm-text-title">Participants</label>
 						<div class="switch w-100">
-							<button class="btn switch-btn-left w-50 mx-1">4</button>
-							<button class="btn switch-btn-right w-50 mx-1">8</button>
+							<button class="switch-btn switch-btn-left w-50 mx-1">4</button>
+							<button class="switch-btn switch-btn-right w-50 mx-1">8</button>
 						</div>
                     </div>
                 </form>
@@ -68,7 +70,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const buttons = document.querySelectorAll(".switch .btn");
+            const buttons = document.querySelectorAll(".switch-btn");
 
             buttons.forEach(button => {
                 button.addEventListener("click", () => {
