--- a/frontend/service/components/sidebar/sidebar.html
+++ b/frontend/service/components/sidebar/sidebar.html
@@ -1,6 +1,6 @@
 <div id="sidebar" class="sidebar d-flex flex-column">
 	<div class="p-3">
-		<h3 class="username ctm-text-title"></h3>
+		<h3 id="sidebar-username"class="ctm-text-title"></h3>
 		<ul class="nav flex-column">
 			<li class="nav-item"><a href="/profile" class="nav-link ctm-link">My Profile</a></li>
 			<li class="nav-item"><a href="/friends" class="nav-link ctm-link">Friends</a></li>
