--- a/frontend/service/components/login/login.html
+++ b/frontend/service/components/login/login.html
@@ -15,7 +15,7 @@
 				<div class="d-flex justify-content-center w-100">
 					<button type="submit" class="btn ctm-btn w-50 flex-grow-1" id="submit">Submit</button>
 					<div class="text-center ctm-text-light p-1">or</div>
-					<button type="submit" class="btn ctm-btn w-50 flex-grow-1">Login with 42</button>
+					<button id="login42-button" class="btn ctm-btn w-50 flex-grow-1">Login with 42</button>
 				</div>
 				<div class="d-flex justify-content-center mt-3 w-100">
 					<div id="forgot-pw" class="btn ctm-btn-secondary flex-grow-1">Forgot your password?</div>
