no me acuerdo ni de lo que he hecho

--- a/frontend/service/components/signup/signup.html
+++ b/frontend/service/components/signup/signup.html
@@ -6,19 +6,19 @@
         <form id="register-form"> <!-- currently Im not using this id -->
             <div class="mb-3">
                 <label for="username" class="form-label ctm-text-light">Username</label>
-                <input type="text" class="form-control ctm-text-dark" id="new-username" required>
+                <input type="text" class="form-control ctm-form" id="new-username" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label ctm-text-light">Email</label>
-                <input type="email" class="form-control ctm-text-dark" id="email" required>
+                <input type="email" class="form-control ctm-form" id="email" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label ctm-text-light">Password</label>
-                <input type="password" class="form-control ctm-text-dark" id="new-password" required>
+                <input type="password" class="form-control ctm-form" id="new-password" required>
             </div>
             <div class="mb-3">
                 <label for="confirm-password" class="form-label ctm-text-light">Confirm Password</label>
-                <input type="password" class="form-control ctm-text-dark" id="confirm-password" required>
+                <input type="password" class="form-control ctm-form" id="confirm-password" required>
             </div>
             <div class="d-flex justify-content-center">
                 <button type="submit" class="btn ctm-btn" id="register">Register</button>
