--- a/frontend/service/components/home/styles.css
+++ b/frontend/service/components/home/styles.css
@@ -13,6 +13,8 @@
     margin-bottom: 10px;
     cursor: pointer;
     transition: background-color 0.3s;
+    border: 1px solid var(--light);
+
 }
 
 .friend-btn:hover {
