starting with pong integration

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -22,7 +22,7 @@
 							</div>
 							<div id="quick-play-options" class="h-100 flex-column" style="display: none !important;">
 								<div id="play-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
-								<div id="play-any-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with any friend</div>
+								<div id="pong-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play random</div>
 								<div id="play-machine" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play against the machine</div>
 							</div>
 							<div id="friend-list" class="h-100 flex-column" style="display: none;">
@@ -53,7 +53,7 @@
 							</div>
 							<div id="chess-friend-options" class="h-100 flex-column" style="display: none;">
 								<div id="chess-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
-								<div id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with any friend</div>
+								<div id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play random</div>
 							</div>
 							<div id="chess-friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
