fixed tournament bug

--- a/frontend/service/components/tournament/new-tournament.html
+++ b/frontend/service/components/tournament/new-tournament.html
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 		</form>
-		<section id="friends-list" class="collapsible">
+		<section id="tournament-friends-list" class="collapsible">
 			<div class="d-flex flex-column text-center">
 				<div id="friends-container" class="mb-3 friends-container w-100"></div>
 				<button id="start-tournament-btn" class="btn ctm-btn mb-3 w-100" disabled>
