some upgrades on setting

--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -115,7 +115,7 @@
             </div>
             <!-- Save Changes Button -->
             <div class="mt-4 text-center">
-                <button class="btn ctm-btn" id="save-changes-btn" data-bs-toggle="modal" data-bs-target="#save-changes-modal">Save Changes</button>            </div>
+                <button class="btn ctm-btn" id="save-changes-btn" data-bs-toggle="modal" data-bs-target="#save-changes-modal" disabled>Save Changes</button>            </div>
             </div>
     </div>
 </div>
@@ -150,7 +150,7 @@
             </div>
             <div class="modal-body">
                 <p>Please enter your password to save changes:</p>
-                <input type="password" id="confirm-changes-password" class="form-control" placeholder="Enter your password">
+                <input type="password" id="confirm-changes-password" class="form-control ctm-form" placeholder="Enter your password">
             </div>
             <div class="modal-footer text-center">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
