--- a/frontend/service/components/settings/styles.css
+++ b/frontend/service/components/settings/styles.css
@@ -36,6 +36,11 @@
 
 }
 
+.ctm-form.selected {
+    background-color: var(--light) !important;
+    color: var(--dark) !important;
+}
+
 .qr {
     margin-top: 20px;
     height: auto;
