Pong working but very ugly & freezes upon game end

--- a/frontend/service/components/pong/styles.css
+++ b/frontend/service/components/pong/styles.css
@@ -1,6 +1,6 @@
 #board
 {
-	background-color: white;
+	background-color: black;
 	border-top: 5px solid turquoise;
 	border-bottom: 5px solid turquoise;
 }
