--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Pong Game</title>
+    <title>AI Pong</title>
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1 id="game-title">JS Pong game vs AI</h1>
     <canvas id="board"></canvas>
-    <div class="instructions">Use W & S to move your paddle</div>
+    <div class="instructions">Use W & S to move your paddle, D for power up</div>
     <script type="module" src="app.js"></script>
 </body>
 </html>
