pong instructions made clearer

--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -1,4 +1,6 @@
 
-<canvas id="board"></canvas>
-<div class="instructions">Use W & S to move your paddle, D for power up</div>
+<div id="board-container">
+    <canvas id="board"></canvas>
+    <div class="instructions">Use W & S to move your paddle, D for power up</div>
+</div>
 <script type="module" src="app.js"></script>
