some styling on pong

--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -1,6 +1,9 @@
 
 <div id="board-container">
-    <canvas id="board"></canvas>
-    <div class="instructions">Use W & S to move your paddle, D for power up</div>
+    <div class="blinking-neon-frame p-3">
+
+        <canvas id="board" class="p-2"></canvas>
+    </div>
+        <div class="instructions">Use W & S to move your paddle, D for power up</div>
 </div>
 <script type="module" src="app.js"></script>
