--- a/frontend/service/components/pong/styles.css
+++ b/frontend/service/components/pong/styles.css
@@ -7,17 +7,19 @@
 }
 
 #board {
-    background-color: black;
-    border: 5px solid turquoise; 
-    box-shadow: 0px 0px 15px cyan; /* Glowing effect */
+    background-color: var(--transparent-dark);
+    border: 5px solid var(--light);
+ /*    box-shadow: 0px 0px 15px cyan; */ /* Glowing effect */
     display: block;
+    border-radius: 6px;
 }
 
 .instructions {
     margin-top: 40px; /* Space between the board and instructions */
     padding: 10px 15px;
-    background-color: rgba(0, 0, 0, 0.6); /* Black background behind text */
-    color: turquoise;
+    background-color: var(--transparent-dark); /* Black background behind text */
+    color: var(--light);
+    border: 1px dashed var(--light); /* Change to dashed border */
     font-size: 18px;
     font-family: Arial, sans-serif;
     border-radius: 5px;
