--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -115,7 +115,7 @@
             </div>
             <!-- Save Changes Button -->
             <div class="mt-4 text-center">
-                <button class="btn ctm-btn" id="save-changes-btn" data-bs-toggle="modal" data-bs-target="#save-changes-modal" disabled>Save Changes</button>            </div>
+                <button class="btn ctm-btn" id="save-changes-btn" disabled>Save Changes</button>           
             </div>
     </div>
 </div>
@@ -151,6 +151,10 @@
             <div class="modal-body">
                 <p>Please enter your password to save changes:</p>
                 <input type="password" id="confirm-changes-password" class="form-control ctm-form" placeholder="Enter your password">
+                <div id="otp-form" class="mt-3" style="display: none;">
+                    <p>OTP is required to deactivate the 2FA</p>
+                    <input type="password" id="otp-input" class="form-control ctm-form w-50" placeholder="Enter your OTP code">
+                </div>
             </div>
             <div class="modal-footer text-center">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -169,7 +173,8 @@
                 <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
             </div>
             <div class="modal-body">
-                <div>Haz el favor de leer el QR antes de cerrar el modal que si no vamos a tener un problema</div>
+                <h5>2FA enabled succesfully</h5>
+                <div>Please, read the QR or you'll be in trouble</div>
                 <div class="d-flex align-items-center justify-content-center">
                     <div class="qr" id="qr-place"></div>
                 </div>
