apparently settings are going nice

--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -145,7 +145,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="save-changes-modal-label">Confirm Changes</h5>
+                <h5 class="modal-title ctm-text-title" id="save-changes-modal-label">Confirm Changes</h5>
                 <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
             </div>
             <div class="modal-body">
