--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -2,7 +2,7 @@
 <div id="board-container">
     <div class="blinking-neon-frame p-3">
 
-        <canvas id="board" class="p-2"></canvas>
+        <canvas id="board"></canvas>
     </div>
         <div class="instructions">Use W & S to move your paddle, D for power up</div>
 </div>
