--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -93,7 +93,7 @@
 </div>
 
 <div id="board-container"></div>
-    <div class="blinking-neon-frame p-3">
+    <div class="blinking-neon-frame p-3" id ="neonFrame" hidden>
         <canvas id="board" hidden></canvas>  <!-- Initially hidden -->
     </div>
     <div class="instructions" id="instructions" hidden> Controls: (up, down, powerup): L: W, S, D | R: (arrows): up, down, left </div>
