--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -4,7 +4,7 @@
 			<!-- <button id="cancel-login" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button> -->
 			<h2 class="text-center ctm-text-title">Your friends</h2>
 			<div id="friend-list" class="h-100 flex-column">
-				<div id="friends-container" class="mb-3"></div>
+				<div id="friends-container" class="mb-3 ctm-text-light text-center"></div>
 				<!-- <button id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button> -->
 				<!-- <button id="back-to-options" class="btn ctm-btn mb-3">Back to Options</button> -->
 			</div>
